testdata/invalid/invalid_bitflags_unparseable_int.bop
[flags]
enum Flags : int16 {
    A = (1111111111111111111111111111111111111111111111111111111111111111111111 | 10);
}